Improve weather fetch and fix dark mode

--- a/portal/styles.css
+++ b/portal/styles.css
@@ -519,6 +519,11 @@ label.authForm {
   border-width: 5px;
 }
 
+.authNavToggle {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 .authFormContainer input {
   outline-color: rgba(0, 0, 0, 0);
 }
